--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="sec-hand"></div>
             </div>
 
-            <div class="clock-logo"><span>C</span>haudhary</div>
+            <div class="clock-logo"><span>Abdul</span> Rahman</div>
 
             <div class="theme-btn">
                 <ion-icon class="moon" name="moon"></ion-icon>
